--- a/ENG101 Open Access 2/discoursecommunities.html
+++ b/ENG101 Open Access 2/discoursecommunities.html
@@ -52,12 +52,12 @@
                 <ol>
 
                   <li><a href="#What are discourse communites?">What are discourse communities?</a></li>
-                  <li><a href="#What does writing and communication look like inside different communities?"</a> </li>
-			<li><a href="#Why is it important to learn how different communities function?"</a> </li>
-			<li><a href="#What are communities of practice and why are they important?"</a></li>
-			<li><a href="#What is an identity kit?"</a></li>
-			<li><a href="#How do I write in different contexts for different audiences?"</a></li>
-			<li><a href="#Examples of discourse community analysis assignments"</a></li>
+                  <li><a href="#What does writing and communication look like inside different communities?">What does writing and communication look like inside different communities?</a> </li>
+			<li><a href="#Why is it important to learn how different communities function?">Why is it important to learn how different communities function?</a> </li>
+			<li><a href="#What are communities of practice and why are they important?">What are communities of practice and why are they important?</a></li>
+			<li><a href="#What is an identity kit?">What is an identity kit?</a></li>
+			<li><a href="#How do I write in different contexts for different audiences?">How do I write in different contexts for different audiences?</a></li>
+			<li><a href="#Examples of discourse community analysis assignments">xamples of discourse community analysis assignments</a></li>
                   </ol>
 
                   <h3 id="What are discourse communities?">What are discourse communities?</h3>
