--- a/ENG101 Open Access 2/discoursecommunities.html
+++ b/ENG101 Open Access 2/discoursecommunities.html
@@ -57,7 +57,7 @@
 			<li><a href="#What are communities of practice and why are they important?">What are communities of practice and why are they important?</a></li>
 			<li><a href="#What is an identity kit?">What is an identity kit?</a></li>
 			<li><a href="#How do I write in different contexts for different audiences?">How do I write in different contexts for different audiences?</a></li>
-			<li><a href="#Examples of discourse community analysis assignments">xamples of discourse community analysis assignments</a></li>
+			<li><a href="#Examples of assignments">Examples of Assignments</a></li>
                   </ol>
 
                   <h3 id="What are discourse communities?">What are discourse communities?</h3>
@@ -106,7 +106,7 @@
 <li>Ways to make informed decisions about intellectual property issues connected to common genres and modalities in their fields.</li>
 </ul>
 <h3 id="What does writing and communication look like inside different communities?">What does writing and communication look like inside different communities?</h3>
-<h3 id="Example Assignments and Papers">Examples of Assignments and Papers</h3>
+<h3 id="Example of assignments">Examples of Assignments and Papers</h3>
 <ul>
 <li><a href="samples/discoursecommunitysample2.pdf"target="_blank">Discourse Community Analysis Example</a></li>
 <li><a href="samples/discoursecommunitysample.pdf"target="_blank">Discourse Community Analysis Example</a></li>
