--- a/ENG101 Open Access 2/multimodal.html
+++ b/ENG101 Open Access 2/multimodal.html
@@ -50,42 +50,32 @@
 							<h1>Multimodality</h1>
 <p>On this webpage, you will learn how to answer the following questions:</p>
 <ol>
-	<li><a href="#">What is multimodality?</a></li>
-<li><a href="#">Why is multimodal composition important?</a></li>
-<li><a href="#"></a>What is semiotics?</li>
+	<li><a href="#What is multimodality">What is multimodality?</a></li>
+<li><a href="#Whay is multimodal comp important">Why is multimodal composition important?</a></li>
+<li><a href="#Sample projects"></a>Examples of Multimodal Projects</li>
 	</ol>
 
+							<h3 id="What is multimodality">What Is Multimodality?</h3>
+							<p>By Dan Martin</p>
 							<p>Multimodality is not a new term or idea. Many people use multimedia and multimodal interchangably despite the
 								differences between the terms. Multimedia is a term more closely associated with the production and delivery of media
-								and multimodality is a term more closely associated with composing and creating the multimedia product. The more
-								important distinction to make is between the terms mode and medium. These two terms are in fact different. A mode
-								is a sound, image, animation, or text while a medium is something that contains modes like a TV, radio, computer,
-								smartphone, etc. In this course, we are interested in how people use different modes and mediums to design a variety
-								of messages on a variety of platforms for a variety of different purposes and goals.Tracey Bowen and Carl Whithaus
+								and multimodality is a term more closely associated with composing with media and creating a multimedia product. A more
+								important distinction to make is between the terms <i>mode</i> and <i>medium</i>. These two terms are different. A mode
+								is a sound, image, animation, or text (writing) while a medium is something that contains different modes and combinations of modes 
+								like a TV, radio, computer, or smartphone. People use different modes and mediums to design a variety
+								of messages on a variety of platforms for different purposes and goals. Tracey Bowen and Carl Whithaus
 								(2013) define multimodal composing as “the conscious manipulation of the
 						interaction among various sensory experiences—visual, verbal, tactical, aural—used in the processes or producing
 						and reading texts” (7). This definition highlights the rhetorical, semiotic, and intertextual nature of multimodal
-						and digital forms that require critical multimodal literacies to interpret. Cordova (2013) also argues that
-						multiliteracies are “deeply concerned with the hybridity of culture and the intertextuality of semiotic symbolic
-						flows” (150) of content and information.</p>
+						and digital forms that require critical multimodal literacies to interpret. </p>
 
-<p>Using print literacy conventions to read multimodal and digital text hinders the user's ability to account for
-the decontextualization of various intertext. Print conventions and standards for reading do not apply to multimodal
-forms that combine image, text, and sound to create remixed forms. Cheryl Ball asserts that in a multimodal project or
- digital text “The multiple modes that the designer presents to readers encourages them to perform, or rather, produce
- [the author’s] argument for themselves” (419). Multimodal forms ask readers to construct meaning from the semiotic
- materials provided. Fake news, delivered via social media in a multimodal form, asks users to produce their own meaning
- for the news. </p>
-
-<p>Multimodal texts allow for more ways to generate meaning because the combining of forms opens more entry-ways into that
-text for a user. “Meaning is made through the reader’s choice and arrangement of multimodal fragments” (Ball 420).
-This is particularly relevant when scrolling down a news feed and reading headlines, comments, likes, images, and sounds.
-These combinations of modes and forms impact how we read each form. Multimodal and digital forms provide users an
-opportunity to forge their own experience with the content and an opportunity to control how they generate meaning to
-some extent; however, we need to teach students how to generate valuable meanings from multimodal and digital forms.
-These mediums and forms can be as useful or as useless as the strategies we employ to select and design with them.
-Teaching students multimodal literacies and digital rhetoric is the best means of combating misinformation and fake
-news in digital writing environments. The following six truths from Barthes have been updated to accommodate multimodal forms:</p>
+<p>Learning how to read multimodal and digital text and forms requires learning new conventions and standards for reading 
+combinations of image, text, and sound. Multimodal projects ask readers "to perform, or rather, produce
+ [the author’s] argument for themselves” (Ball, 419). Multimodal texts allow audiences numerous ways to generate meaning because 
+	“Meaning is made through the reader’s choice and arrangement of multimodal fragments” (Ball 420). 
+	Multimodal and digital forms provide users an
+opportunity to forge their own experience with multimodal content</p>
+							
 <ul>
 <li>A multimodal form is a multidimensional space in which a multitude of semiotic materials, none of them original,
 	blend and clash within various mediums.</li>
@@ -99,11 +89,23 @@ news in digital writing environments. The following six truths from Barthes have
 <p>We can use these six semiotic principles of multimodal texts as a method for questioning the
 	multidimensional spaces where authorless networks of semiotic materials must be disentangled.
 	This further exposes the original contexts for each and every type of text involved in formulating a
-	multimodal or digital piece of fake news or misinformation. When approaching the reading of online
+	a new text. When approaching the reading of online
 	material and social media, we should remember that the information has been pieced together from other
 	 materials, and that each one of those materials has an original context.</p>
 
-
+							<h3 id="Why is multimodal comp important">Why Is Multimoda Composition Important?</h3>
+							<h3 id="Sample projects">Sample Projects</h3>
+							<ol>
+								<li><a href="https://soundcloud.com/kinzelma/rhetoric-of-sound-music-in-super-mario-games/s-URgbe">Super Mario Bros and the Rhetoric of Sound</li>
+								<li></li>
+								
+							<h3> Works cited</h3>
+							<ol>
+								<li></li>
+								<li></li>
+								<li></li>
+								<li></li>
+							</ol>
 </div>
 
 <!-- Scripts -->
