--- a/ENG101 Open Access 2/discoursecommunities.html
+++ b/ENG101 Open Access 2/discoursecommunities.html
@@ -46,7 +46,7 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Discourse Communities</h1>
+							<h1>Writing Across Disciplines and Contexts</h1>
                 <p>This webpage will provide an overview of how writing functions across
                 disciplines and contexts and how genres and forms are rhetorically situated within those contexts and
                 disciplines. This webpage will answer the following questions:</p>
@@ -85,8 +85,8 @@
 								<li>and a discourse community has a threshold level
 	of members with a suitable degree of relevant content and discoursal expertise.”</li>
 							</ol>
-							<p>Discourse communities have specific conventions that shape how writing, speaking, and behaving
-							must be done. These conventions establish a set of expectations for members of the discourse community.
+							<p>Discourse communities have specific conventions for writing, speaking, and behaving that members are expected to learn. 
+								These conventions establish a set of expectations for members of the discourse community.
 							The Writing Program Adminstration further defines conventions and characteristics for discourse communities in 
 								its statements about writing across contexts.
 						 </p>
