--- a/ENG101 Open Access 2/outcomes.html
+++ b/ENG101 Open Access 2/outcomes.html
@@ -50,39 +50,50 @@
 						<div class="inner">
 							<h1>Introduction to ENG 101</h1>
 
-						<p>ENG 101 is built around five domains of knowledge that Anne Beaufort contends professional writers pull from
+						<p>ENG 101 is built around five domains of writing knowledge (Anne Beaufort) professional writers pull from
 						when writing for various rhetorical situations: </p>
 						<ul>
-							<li><strong>Rhetorical knowledge</strong>: rhetorical situation; rhetorical reading; (exigence, rhetors, audience, constraints, Kairos). Students need more work throughout the course with rhetoric and rhetorical situations and how 
-	writing is dependent on audience, context, constraints, purpose, and rhetors.</li>
-						<li><strong>writing process knowledge</strong>:incubation to product; terms (drafting, revising, editing, situational
-						variables, extensive and reflexive. Writing studies research continually demonstrates the value of process knowledge. 
-	Students need more attention to writing processes and to practice developing a writing process metalanguage to think about and discuss writing.</li>
-						<li><strong>genre knowledge</strong>: structure and form, audience. Introduce students to the different types of genres and forms they will encounter across courses, 
-	contexts, and disciplines and explain how those genres require different writing processes and are rhetorically situated in specific ways. </li>
-						<li><strong>discourse community knowledge</strong>: conventions, jargon, identity kits. Introduce students to the many different writing practices and literacies they will encounter 
-	across courses, contexts, and disciplines and discuss how those practices are rhetorically situated and require unique composing processes.</li>
-						<li><strong>and content knowledge</strong>: what does writing do across contexts? (p. 3). </li>
+							<li><strong>Rhetorical Knowledge</strong>: writers use their understanding of rhetorical situations (exigence, rhetors, audience, constraints, Kairos) and 
+								the ability to read texts rhetorically to make important writing decisions.</li>
+						<li><strong>Writing Process Knowledge</strong>: writers use their understanding of the writing process to plan, draft, revise, and edit their work. 
+							Writing studies research continually demonstrates the value of process knowledge and how writers transfer it across contexts. </li>
+						<li><strong>Genre Knowledge</strong>: writers rely on their experiences and knowledge of different genres and how they structure and 
+							form content in different ways for different purposes and audiences. The different types of genres and forms you will encounter across courses , 
+	contexts, and disciplines will be rhetorically situated in specific ways and require different writing processes. </li>
+						<li><strong>Discourse Community Knowledge</strong>: writers rely on their understanding of standards and conventions when writing for certain communitities, purposes, and audiences.
+						Students will encounter many different writing practices and literacies
+	across courses, contexts, and disciplines that have been constructed for a specific group of people .</li>
+						<li><strong>Content Knowledge</strong>: writers rely on an understanding of the field's knowledge to write for a community.
+							Without an understanding of the knowledge making practices a community uses to write, members of a community will struggle to 
+							write well and connect with the community.(Beaufort, p. 3). </li>
 						</ul>
 							
-	<p>ENG 101 is designed to provide you with writing knowledge that you can use to make decisions about writing across contexts.
+	<p>ENG 101 will provide you with writing knowledge from these five domains so that you can have a foundation of writing knowledge based on research and expertise
+		to  make decisions about writing across contexts.
 								Expectations for writing built on myths lead to frustrated students.
-								The CWU English Writing Program believes that knowing what writing is and does leads to better writing.
-								Students benefit from developing their writing knowledge 
-								into a travel guide for writing across disciplines.
-						 Learning Beaufort’s domains for writing knowledge
-						will expand your understanding of how writing functions across disciplines and contexts. 
-		The ENG 101 curriculum meets all of the AWI learning outcomes, and our outcomes align with the research on
-teaching writing and best practices. </p>
+								The English department's Writing Program at CWU believes that knowing what writing is and does leads to better writing.
+								Students need to develop writing knowledge 
+								they can use as a travel guide for writing across disciplines.
+						 Learning more about Beaufort’s domains for writing knowledge
+						will expand your understanding of how writing functions across disciplines and contexts, how all writing is rhetorically situated, and how
+		writers actually write for real communities and purposes. 
+		The English department's ENG 101 curriculum meets all of the AWI learning outcomes, and our learning outcomes align with the research on
+		teaching writing and best practices from the leaders in the field of writing studies. </p>
+		<p>We followed the Statements and Principles for developing writing programs and curriculums from the Writing Program Administration, the National Center for Teaching English, the Conference of College Composition and Communication, and the Writing Across the Curriculum Administration. 
+		Current research in writing studies proclaims that writing instruction and composition pedagogy should be teaching students how to transfer what 
+		they learn and know about writing across disciplines and contexts so that they have the best chance to apply what they learn to the writing 
+		they will do in and outside of the university. According to the Writing Program Administration (WPA) “Statement and Principles,” writing 
+		courses should focus on teaching students’ rhetorical knowledge, critical thinking, writing process knowledge, knowledge of conventions 
+		and genres across disciplines, and multimodal and multimedia literacies."</p>
 
 <h1>ENG 101 Learning Outcomes</h1>
 <p><b>Outcome 1</b>: Identify and analyze how a variety of print, digital, and multimodal texts are rhetorically
   situated, locating their purposes, claims, evidences, biases, intended audiences, and constraints.</p>
-<p>Conduct rhetorical analysis assignments that explore how context, audience, purpose, and constraints shape
-  writing across contexts. Complete rhetorical reading analysis responses. Practice using writing and
-  multimodality to respond and react to source material. Graded papers, reading responses, analysis
-  responses, and multimodal projects using rubrics. Graded assignments that examine how different textual
-  forms serve a purpose for an audience.</p>
+<p>For this outcome, student will conduct rhetorical analysis assignments that explore how context, audience, purpose, and constraints shape
+  writing across contexts. Students will complete rhetorical reading analysis responses and learn how to read a variety of texts for purpose, audience, bias,
+	evidences. Students will practice using writing and
+  multimodality to respond and react to different types of primary and secondary source material. Students will complete graded papers, reading responses, analysis
+  responses, and multimodal projects using narrative rubrics.</p>
 <p><b>Outcome 2</b>: Read, summarize, analyze, and synthesize a variety of college-level print and
   multimedia sources to support and respond to a variety of ethical and objective writing goals across contexts. </p>
   <p>Annotations that summarize source material. Annotations with rhetorical commentaries. Reading synthesis and analysis
