--- a/ENG101 Open Access 2/rhetoric.html
+++ b/ENG101 Open Access 2/rhetoric.html
@@ -48,45 +48,30 @@
 						<div class="inner">
 							<h1>Rhetorical Knowledge</h1>
 							<p>By Dan Martin</p>
-<p>In this course, you will learn how to use rhetoric as a frame to analyze a vareity of different texts and forms and
-consider how those texts and forms address specific audiences, for a specific purpose, within a specific context.
-Before we continue, I want to define <i>text</i> and <i>discourse</i>. In this course, a text can be a book,
-an article, a poem, a social media post, a book chapter, a song, or any other form that uses
-words, sounds, images, animation, or signs and signifiers to communicate a message. In this course, your instructor will use the term text
-generically to represent a variety of genres and forms people use to write and communicate with each other.
-You also will learn that rhetors, people who create texts, use discourse to communicate messages to
-audiences for a purpose, and that there
-are constraints and limitations controlling a rhetor's ability to shape a message. Discourse is how we use
-language and writing to communicate. The term discourse means the ways we use language to communicate.
-Discourse could be written or spoken words. Discourse can take
-digital forms, too. In this course you will learn more about how people use a variety of different
-discourses for different purposes. The CWU Writing Program contends that learning about different discourse communities
-and how writing functions across contexts will prepare you to write for a variety of situations you will encounter on and off campus.
-								Below is an outline of this chapter and some of the main questions it will answer:</p>
+
     <ol>
-      <li><a href="#What is rhetoric?">What is rhetoric?</a></li>
-<li><a href="#Why is rhetoric important?">Why is rhetoric important?</a></li>
-<li><a href="#What is digital rhetoric?">What is digital rhetoric?</a></li>
-      <li><a href="#What are rhetorical situations?">What are rhetorical situations?</a></li>
-      <li><a href="#What is rhetorical analysis?">What is rhetorical analysis?</a></li>
-    <li><a href="#Why is it important?">Why is rhetorical analysis important?</a></li>
-    <li><a href="#What readings will help me understand these ideas and terms?">What readings will help me understand
-    these ideas and terms?</a></li>
+      <li><a href="#What is rhetoric?">What Is Rhetoric?</a></li>
+<li><a href="#Why is rhetoric important?">Why Is Rhetoric Important?</a></li>
+<li><a href="#What is digital rhetoric?">What Is Digital Rhetoric?</a></li>
+      <li><a href="#What are rhetorical situations?">What Are Rhetorical Situations?</a></li>
+      <li><a href="#What is rhetorical analysis?">What Is Rhetorical Analysis?</a></li>
+    <li><a href="#Why is it important?">Why Is Rhetorical Analysis Important?</a></li>
+    <li><a href="#What readings will help me understand these ideas and terms?">Readings and Resources</a></li>
       </ol>
 
-    <h3 id="What is rhetoric?">What is rhetoric</h3>
+    <h3 id="What is rhetoric?">What Is Rhetoric</h3>
 	<p>By Kimberly Smith and Dan Martin</p>
     <p>You may have heard people call the puffed-up speeches of politicians or slippery statements of corporate public relations representatives 
-	    “rhetoric.” In casual conversation, the word “rhetoric” is often used disparagingly to refer to dishonest speech intended to influence people. 
+	    “rhetoric.” In casual conversation, the word “rhetoric” is often used disparagingly to refer to dishonest speech intended to manipulate audiences. 
 	    However, in writing classrooms and other academic settings, rhetoric is a field of knowledge, not a dirty word. In fact, students have been studying 
-	    rhetoric as a path toward effective composition for thousands of years. </p>
-
-<p>Rhetoric is a frame for thinking about how and why people communicate and persuade one another. In other words, rhetoric is a Swiss army knife 
-for understanding human communication. According to the Writing Program Council, students should be focusing on developing specific knowledge sets.
-	They contend that:</p>
+	    rhetoric to improve their thinking, speaking, and writing for thousands of years. 
+	    Rhetoric is a frame for thinking about how and why people communicate and persuade one another. In other words, rhetoric is a Swiss army knife 
+for understanding human communication. According to the <a href="https://wpacouncil.org/aws/CWPA/pt/sp/statements">Writing Program Administration</a>, 
+	    students should be developing knowledge about writing and rhetoric in first-year writing courses.
+	The WPA contends that:</p>
 
 <p>"Rhetorical knowledge is the ability to analyze contexts and audiences and then to act on that
-	analysis in comprehending and creating texts.  Rhetorical knowledge is the basis of composing. Writers
+	analysis in comprehending and creating texts. Rhetorical knowledge is the basis of composing. Writers
 	develop rhetorical knowledge by negotiating purpose, audience, context, and conventions as they compose a
 	variety of texts for different situations. By the end of first-year composition, students should learn and
 	use key rhetorical concepts through analyzing and composing a variety of texts. Gain experience reading and
@@ -96,28 +81,31 @@ for understanding human communication. According to the Writing Program Council,
 	variety of technologies to address a range of audiences. Match the capacities of different environments (e.g.,
 	print and electronic) to varying rhetorical situations."</p>
 
-<p>When you study rhetoric, you can begin to see how people interact 
-using words, sounds, images, gestures, and symbols. In this chapter, you will use rhetoric as a frame 
-to analyze a variety of texts. (A text can be a book, an article, a poem, a social media post, a song, 
-a photograph, a video game or any other form that communicates a message). Utilizing a rhetorical lens, 
-you will discover how these texts address specific audiences for a specific purpose within a specific 
-context. In the process, you’ll also learn how rhetors, the people who create texts, craft their texts to set them up for success.</p>
+<p>When you study rhetoric, you can begin to see how people 
+use words, sounds, images, gestures, and symbols to communicate and construct knowledge. This webpage will teach you how to use rhetoric as a frame 
+to analyze a variety of texts. (Remember that a text can be a book, an article, a poem, a social media post, a song, 
+a photograph, a video game or any form that communicates a message). Rhetoric is a lens to help 
+you uncover how texts address specific audiences for specific purposes within specific 
+contexts. You’ll also learn how rhetors, the people responsible for creating texts, design messages around audience, purposes, and constraints.
+	</p>
 
-<p>In Backpacks vs. Briefcases: Steps toward Rhetorical Analysis, Laura Bolin Carroll reminds readers that rhetoric is all around us, writing, 
-	“As we interact with other people and with media, we are continually creating and interpreting rhetoric” (47). You might be surprised by 
+<p>In "Backpacks vs. Briefcases: Steps toward Rhetorical Analysis," Laura Bolin Carroll reminds readers that rhetoric is all around us, and that 
+	"we are continually creating and interpreting rhetoric” when we read and write (47). You might be surprised at 
 	how often you intuitively apply rhetorical concepts in your daily life. Consider, for instance, a time when you needed to ask your parents for money. 
-	You probably put a lot of thought into how you phrased your request. Instead of bursting into the room and demanding that your parents give you 
-	twenty dollars, you may have considered what arguments would have persuaded them to help you out. Had you been doing all of your chores and keeping 
-	up with your schoolwork? Were you planning to use the money for something important that your parents would value? Maybe you decided to use a certain 
-	tone of voice and wear your nicest clothes. Or maybe you opened your request for money with a compliment and a reminder of all the times you paid for 
-	things out of your own pocket during the previous year. These are examples of rhetorical approaches.</p>
+	You probably put a lot of thought into how you phrased your request. Instead of bursting into the living room and demanding that your parents give you 
+	twenty dollars, you most likely already know how to persuade them. You might remind them that completed all your chores and schoolwork for the week before asking, or
+	that you are you planning to use the money for something your parents would value. You might use a certain 
+	tone of voice, or open the conversation with a compliment. "Hi Mom. You look great. That's a really nice outfit."
+	Or maybe you opened your request for money with gentle a reminder of all the times you've paid for 
+	something important out of your own pocket. These are rhetorical approaches and decisions.</p>
 
-<p>Because you likely know your parents or guardians well, and therefore know what motivates them, you might find them easy to persuade. However, what about 
-	when you need to persuade your state representatives or your professors? How would you go about writing a letter to an employer about a raise or 
-	encouraging the strangers in your apartment building to go on rent strike? Rhetoric gives you a frame to consider these situations and to make 
-	informed writing decisions. Rhetoric as a field of study also concerns itself with how messages are delivered in different forms. As technology evolves, 
-	so do rhetorical texts and the methods we use to analyze them. Digital texts are created and circulated differently and more quickly than print texts, 
-	and they present unique opportunities and limitations for rhetors hoping to persuade their audiences. This means it’s important to consider the mode 
+<p>Because you likely know your parents or guardians well, and therefore know what motivates them, you might find them relatively easy to persuade. But what about 
+	persuading your state representatives or your professors? How would you go about writing a letter to an employer about a raise, or a memo
+	encouraging residents in your apartment building to go on rent strike? How do you try to convince someone you don't know to donate money to a particular cause you value?
+	Rhetoric gives you a frame to consider how to manage these situations and make 
+	informed writing decisions. Rhetoric, as a field of study, is also concerned with how messages are circulated and delivered in different forms across various platforms.
+ 	Our abilities and methods to design and analzye texts evolve as technology evolves. Digital texts can be created and circulated more quickly than print texts, 
+	and they present unique opportunities, affordances, and constraints for rhetors to negotiate. This means it’s important to consider the mode 
 	of communication when analyzing or crafting a rhetorical text.</p>
 
 <p>Whether print or digital, performed or recorded, linguistic or visual, all texts that aim to persuade can be better understood through the study of rhetoric. 
@@ -143,7 +131,7 @@ This is because rhetoric is all about understanding how people communicate. By p
 </p>
 							
 
-    <h3 id="Why is rhetoric important?">Why is rhetoric important?</h3>
+    <h3 id="Why is rhetoric important?">Why Is Rhetoric Important?</h3>
     <p>You are probably wondering why you should study rhetoric. You're probably asking yourself, how does
       rhetoric have value for me as a writer and thinker?
       Rhetoric provides writers with an important frame for understanding how writers create texts and readers interact and
@@ -154,6 +142,20 @@ This is because rhetoric is all about understanding how people communicate. By p
   address an objective. It is important to know, to the best of our ability, what that objective is so we can understand
   why the rhetor is creating the discourse and who the discourse is intended to engage.
 </p>
+							<p>First-year writing courses teach you how to use rhetoric as a frame to analyze a variety of different texts and forms so they can
+consider how those texts and forms address specific audiences, for specific purposes, within a specific context.
+Before we continue, I want to define <i>text</i> and <i>discourse</i> in more detail for you. In this course, a text can be a book,
+an article, a poem, a social media post, a book chapter, a song, or any other form that uses
+words, sounds, images, animation, and signs and signifiers to communicate a message. Your instructor might use the term text
+generically to represent a variety of written and spoken genres and forms people use to communicate with each other.
+You also will learn that rhetors, people who create texts, use discourse to communicate messages to
+audiences for a purpose, and that there
+are constraints and limitations that control a rhetor's ability to create and shape a message. Discourse is how we use
+language and writing to communicate. Discourse can be written or spoken words, and it can take on
+digital forms. In this course you will learn how people use a variety of different
+discourses for different purposes. The CWU Writing Program contends that learning how writing and communicating are rhetorically situated
+and how writing functions across contexts will prepare you to write for a variety of situations, contexts, and disciplines you will encounter on and off campus.
+Below is an outline of this chapter and some of the main questions it will answer. Click on a question to learn more about rhetoric:</p>
 
 <h3 id="What are rhetorical situations?">What are rhetorical situations?</h3>
       <p>Lloyd F. Bitzer was one of the first people to write about rhetorical situations in an article titled,
