--- a/ENG101 Open Access 2/stretch.html
+++ b/ENG101 Open Access 2/stretch.html
@@ -47,6 +47,15 @@
 					<div id="main">
 						<div class="inner">
 							<h1>The Stretch Program</h1>
+							
+							<ol>
+      <li><a href="#What is stretch?">What Is Stretch?</a></li>
+<li><a href="#Why is stretch important?">Why Is Stretch Important?</a></li>
+<li><a href="#What do we do?">What Do We Do In Stretch?</a></li>
+<li><a href="#general requirements">General Requirements</a></li>
+      
+      </ol>
+							<h3 id="What is stretch">What Is Stretch</h3>	
 <p> Stretch courses take an ENG 101 course and stretch it out across two quarters so that students have more time to practice writing and get feedback on their
 	writing in low-risk spaces. Stretch courses cover the same learning outcomes and course material as a one quarter ENG 101. Stretching the 
 	learning objectives of a one-quarter writing course across two quarters gives students extended and intensive practice in the types of 
@@ -63,8 +72,7 @@
 								achieve nearly seamless curricular alignment.” A large portion of the stretch model’s success 
 								is dependent on providing students with more practice discussing, drafting, and revising their writing.</p>
 
-							<h3>
-								What Do Students Do in Stretch Courses? </h3>
+							<h3 id="What do we do?">What Do Students Do in Stretch Courses?</h3>
 								<p>Students are required to complete at least four high-stakes writing assignments and to develop the
 									writing processes that accompany those writing assignments. Students will also read a variety of sources
 									and complete several writing assignments, drafts, and reading responses. Instructors teaching stretch
@@ -82,7 +90,7 @@
 									acontextual grammar practice. Include more contextual grammar activities using the students’ writing.</li>
 								</ul>
 
-      <h3>General Requirements for Stretch</h3>
+      <h3 id="general requirements">General Requirement for Stretch</h3>
 <p>All ENG 101A and 101B Courses Should Meet the Following Criteria:</p>
 <ul>
 <li>Students should write at least 8,000 words total across both quarters; these words may include
