--- a/ENG101 Open Access 2/index.html
+++ b/ENG101 Open Access 2/index.html
@@ -143,7 +143,7 @@
 										<img src="images/CWU1920.png" style="width:500px;height:300px;" alt="" />
 									</span>
 									<a href="reading.html">
-										<h2>Critical Reading</h2>
+										<h2>Critical and Rhetorical Reading</h2>
 										<div class="content">
 											<p></p>
 										</div>
@@ -154,7 +154,7 @@
 										<img src="images/CWUdrawing.png" style="width:500px;height:300px;" alt="" />
 									</span>
 									<a href="wac.html">
-										<h2>WAC/WID</h2>
+										<h2>Research and Writing</h2>
 										<div class="content">
 											<p></p>
 										</div>
@@ -165,7 +165,7 @@
 										<img src="images/CWUlibrary1925.png" style="width:500px;height:300px;" alt="" />
 									</span>
 									<a href="handbook.html">
-										<h2>Handbook</h2>
+										<h2>Rhetorical Grammar, Style, and Mechanics </h2>
 										<div class="content">
 											<p>.</p>
 										</div>
