--- a/ENG101 Open Access 2/revision.html
+++ b/ENG101 Open Access 2/revision.html
@@ -47,22 +47,9 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Revision</h1>
+							<h1>Research</h1>
 
-<p><b>By Kimberly Smith</b></p>
-<p>In “The Maker’s Eye: Revising Your Own Manuscripts,” Donald Murray points out how many students
-  believe that writing is done after their first draft is complete. However, more
-  experienced writers tend to feel that the completion of a first draft is just the beginning of the writing process.
-  Subsequent drafts are “opportunities to discover what they have to say and how best they can say it” (161). To
-  improve a piece of writing, writers need to learn to read their writing with the
-  detachment of a stranger (162). They need to be both critical and constructive.
-  While different writers revise in different ways, they usually go through a few basic steps.
-  Writers begin by looking at the big picture and focus in on the details as they revise (Murray 163).
-  Writers consider the following aspects of writing when revising: information, meaning, audience, form, structure,
-  development, dimension, and voice (Murray 163). For Murray, “A piece of writing is never finished” (165). While a deadline
-  may necessitate that a piece of writing be turned in, there are always opportunities to keep revising.
-  Writing is an ongoing process that doesn’t end after the first draft. Even professional
-writers put a lot of time into revision to produce the polished texts students encounter in their classes.</p>
+
 
 </div>
 
