Update and rename revision.html to research.html

--- a/ENG101 Open Access 2/research.html
+++ b/ENG101 Open Access 2/research.html
@@ -48,7 +48,16 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Research</h1>
-
+<ol>
+      <li><a href="#What is research?">What Is Research?</a></li>
+<li><a href="#What is primary research?">Why Is Rhetoric Important?</a></li>
+<li><a href="#What is secondary research?">What Is Digital Rhetoric?</a></li>
+      <li><a href="#What is a research question">What Is a Research Question?</a></li>
+      <li><a href="#How do I use the CWU library database?">How Do I Use the CWU Library Database to Collect Resources?</a></li>
+    <li><a href="#How do I set up interviews, surveys, and observations?">How Do I Organize Interviews, Surveys, and Observations?</a></li>
+    <li><a href="#How do I write a research proposal?">What Is a Research Proposal?</a></li>
+	 <li><a href="#What is an annotated bibliography?">What Is an Annotated Bibliography?</a></li>
+      </ol>
 
 
 </div>
