--- a/ENG101 Open Access 2/index.html
+++ b/ENG101 Open Access 2/index.html
@@ -153,7 +153,7 @@
 									<span class="image">
 										<img src="images/CWUdrawing.png" style="width:500px;height:300px;" alt="" />
 									</span>
-									<a href="wac.html">
+									<a href="research.html">
 										<h2>Research and Writing</h2>
 										<div class="content">
 											<p></p>
